--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
                 <div class=menuIcon></div>
                 <ul>
                     <li><a href="index.html" class="thispage">Home</a></li>
-                    <li><a href="projects.html">Projects!</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
     </header>
+
+    <p>this is a test</p>
     
 
     <div class="mainContent">
