--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Portfolio 9907</title>
     <link rel="stylesheet" href="/style.css">
+    <script src="functions.js"></script>
 </head>
 <body>
     
@@ -20,9 +21,6 @@
             </div>
         </nav>
     </header>
-
-    <p>this is a test</p>
-    
 
     <div class="mainContent">
         <p>This is the homepage.</p>
