--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         </nav>
     </header>
 
+    
+    <script>
+        createNavbar();
+    </script>
+
+
     <div class="mainContent">
         <p>This is the homepage.</p>
         <div></div>
