short texts added

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,11 @@
     </header>
     
     <div class="mainContent">
-        <p>This is the contact page.</p>
+        <h2>ABOUT ME</h2>
+        <br>
+        <p>Nothing happening here at the moment...</p>
+        <div></div>
+
     </div>
 
 </body>
