--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </header>
 
     <div class="mainContent">
-        <p>This is the homepage.</p>
+        <h2>WELCOME</h2>
+        <br>
+        <p>Nothing happening here at the moment...</p>
         <div></div>
     </div>
     
