--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,10 @@
     </header>
     
     <div class="mainContent">
-        <p>This is the projects page.</p>
+        <h2>PROJECTS</h2>
+        <br>
+        <p>On this page you'll find some projects I have taken part in. </p>
+        <div></div>
     </div>
 
 </body>
