--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,9 @@
         <h2>PROJECTS</h2>
         <br>
         <p>On this page you'll find some projects I have taken part in. </p>
-        <div></div>
+        <div>
+            <embed src="http://example.com/the.pdf" width="500" height="375" type="application/pdf">
+        </div>
     </div>
 
 </body>
