--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
         <br>
         <p>On this page you'll find some projects I have taken part in. </p>
         <div>
-            <embed src="http://example.com/the.pdf" width="500" height="375" type="application/pdf">
+            <embed src="resources/G22_Workbook.pdf" width="500" height="375" type="application/pdf">
         </div>
     </div>
 
