--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,9 @@
         <h2>PROJECTS</h2>
         <br>
         <p>On this page you'll find some projects I have taken part in. </p>
-        <div>
-            <embed src="resources/G22_Workbook-compressed.pdf" width="300px" height="200px">
+        <div class="contentBox" id="box1">Media Technology and Interaction Design project: Summate</div>
+        <div class="contentBox" id="box2">
+            <embed src="resources/G22_Workbook-compressed.pdf" width="100%" height="100%">
         </div>
     </div>
 
