--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,9 @@
         <h2>PROJECTS</h2>
         <br>
         <p>On this page you'll find some projects I have taken part in. </p>
-        <div class="contentBox" id="box1">Media Technology and Interaction Design project: Summate</div>
+        <div class="contentBox" id="box1">
+            <p>Media Technology and Interaction Design project: Summate</p>
+        </div>
         <div class="contentBox" id="box2">
             <embed src="resources/G22_Workbook-compressed.pdf" width="100%" height="100%">
         </div>
