--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <div id="menuContent">
                 <div class=menuIcon></div>
                 <ul>
-                    <li><a href="index.html" class="thispage">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html" class="thispage">HOME</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
@@ -25,8 +25,13 @@
     <div class="mainContent">
         <h2>WELCOME</h2>
         <br>
-        <p>Nothing happening here at the moment...</p>
+        <p>My name is Oskar Rebermark, and you seem to have found my portfolio!</p>
+        <br>
         <div></div>
+        <br>
+        <h3>About me</h3>
+        <p>I am a first year masters student in the Interactive Media Technology program at KTH Royal Institute of Technology</p>
+        
     </div>
     
 </body>
