--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
             <div id="menuContent">
                 <div class=menuIcon></div>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html" class="thispage">Contact</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="projects.html">PROJECTS</a></li>
+                    <li><a href="contact.html" class="thispage">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
