--- a/projects.html
+++ b/projects.html
@@ -13,9 +13,9 @@
             <div id="menuContent">
                 <div class=menuIcon></div>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html" class="thispage">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="projects.html" class="thispage">PROJECTS</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
