--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,15 @@
         </nav>
     </header>
     
-    <div class="mainContent">
+    <div class="contentBackground">
         <h2>ABOUT ME</h2>
-        <br>
-        <p>Nothing happening here at the moment...</p>
-        <div></div>
+        
+        <div class="mainContent">
+            <br>
+            <p>Nothing happening here at the moment...</p>
+            <div></div>
 
+        </div>
     </div>
 
 </body>
