lots of changes

--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Portfolio 9907</title>
     <link rel="stylesheet" href="/style.css">
+    <script src="https://kit.fontawesome.com/716b3ef599.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
     <header class="navbar">
         <nav>
             <div id="menuContent">
-                <div class=menuIcon></div>
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="projects.html">PROJECTS</a></li>
-                    <li><a href="contact.html" class="thispage">CONTACT</a></li>
+                    <li><a href="index.html"><i class="fa-solid fa-home"></i> HOME</a></li>
+                    <li><a href="projects.html"><i class="fa-solid fa-folder-open"></i> PROJECTS</a></li>
+                    <li><a href="contact.html" class="thispage"><i class="fa-solid fa-link"></i> CONTACT</a></li>
                 </ul>
             </div>
         </nav>
@@ -24,13 +24,37 @@
     <div class="contentBackground">
         <h2>ABOUT ME</h2>
         <p>Feel free to connect! If you want to get in contact, you can reach me through these channels:</p>
-        <div class="mainContent">
-            <div class="contentBox">
-                <h3>LinkedIn</h3>
-                <h3>GitHub</h3>
-                <h3>Mail</h3>
+        <div class="mainContactContent">
+            <div class="contactBox">
+                <h3>LinkedIn: </h3>
             </div>
-            <div class="contentBox">
+            <div class="contactBox">
+                <img src="/resources/icons/linkedin.png" class="invert">
+            </div>
+            <div class="contactBox">
+                <a href="https://www.linkedin.com/in/oskar-kallebo-rebermark">Oskar Rebermark</a>
+            </div>
+
+            <div class="contactBox">
+                <h3>GitHub: </h3>
+            </div>
+            <div class="contactBox">
+                <img src="/resources/icons/github.png" class="invert"><br>
+            </div>
+            <div class="contactBox">
+                <a href="https://github.com/oskarrebermark">Oskar KR</a><br>
+            </div>
+
+            <div class="contactBox">
+                <h3>Mail: </h3>
+            </div>
+            <div class="contactBox">
+                <img src="/resources/icons/apple.png" class="invert">
+            </div>
+            <div class="contactBox">
+                <a href="mailto:oskar.rebermark@gmail.com">oskar.rebermark@gmail.com</a>
+            </div>
+            <div class="contactBox">
                 
             </div>
 
