--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 
         <div class="mainContent">
             <div class="contentBox">
-                <h3>About me</h3>
+                <h3>About me:</h3>
             </div>
             <div class="contentBox">
                 <p>I am a first year masters student in the Interactive Media Technology program at KTH Royal Institute of Technology.</p>
             </div>
             <div class="contentBox">
-                <h3>Interests</h3>
+                <h3>Interests:</h3>
             </div>
             <div class="contentBox">
-                <p>My interests are</p>
+                <p>My interests are...</p>
             </div>
             <div class="contentBox">
-                <h3>Background</h3>
+                <h3>Background:</h3>
             </div>
             <div class="contentBox">
                 <p>I have a background in information systems and...</p>
