--- a/projects.html
+++ b/projects.html
@@ -27,11 +27,11 @@
         <div class="projectsContent">
             <div class="tabBox">
                 <button class="tab activeP" onclick="openProject('Summate')">Summate</button>
-                <button class="tab" onclick="openProject('AIG_faces')">AIG faces</button>
+                <button class="tab" onclick="openProject('AIG_faces')">AIG Faces</button>
             </div>
             <div id="Summate" class="project" style="display: block;">
-                <h3>Summate</h3>
-                <p>"Summate" was a project undertaken in the course "Media Technology and Interaction Design".</p>
+                <h3>"Summate"</h3>
+                <p>"Summate" was a project undertaken in the course "Media Technology and Interaction Design" in the fall semester of 2024.</p>
 
                 <h3>About</h3>
                 <p>The project centered around the concept of interdependence in hiking. 
@@ -39,12 +39,38 @@
                 We developed a mobile app prototype aimed at enhancing collaboration and organization among hikers by providing tools like customizable 
                 checklists, gear tracking, and shared packing responsibilities.</p>
 
+                <h3>User Testing</h3>
+                <p>Our team conducted semi-structured interviews with eight hikers to gain insights into hiking behaviors. 
+                Feedback from a high-fidelity prototype was collected during usability testing, with users performing tasks and highlighting pain points. 
+                We iteratively improved the design based on this feedback through parallel prototyping and continuous refinement.</p>
+
+                <h3>End Product</h3>
+                <p>The project resulted in a mobile app prototype featuring a customizable checklist for trip preparation, digital gear inventory tracking, 
+                and tools for requesting or borrowing items. It also allowed group collaboration by sharing packing responsibilities, ensuring all needs were met efficiently and seamlessly.</p>
+
+                <p>If you want to have a closer look, please see the PDF below.</p>
+                <object class="pdf" data="/resources/G22_Workbook-compressed.pdf" height="600"></object>
+
             </div>
+
             <div id="AIG_faces" class="project" style="display:none">
                 <h3>AI-generated faces and real faces in gym websites</h3>
-                <p>AIG faces  was a project undertaken in the course </p>
+                <p>AIG Faces was a project undertaken in the course "Human Perception for Information Technology" in the fall semester 2024.</p>
 
+                <h3>About</h3>
+                <p>This project investigated the differences in user perception when gym websites utilized AI-generated faces (AIG) versus real human faces. 
+                By embedding both types of faces into a gym website's user interface, the study analyzed how each impacted the perception of three dimensions: wellness, 
+                inclusivity, and socialization. Through a combination of quantitative and descriptive analysis, the project provided insights into the nuances of user responses to AIG content in visual design.</p>
 
+                <h3>User Testing</h3>
+                <p>A total of 30 participants aged 18-34 from diverse countries were recruited via convenience and snowball sampling. Participants were divided into two groups, 
+                each interacting with a survey featuring either real faces or AIG faces. They evaluated website content through Likert-scale questions and open-ended responses focusing on wellness, 
+                inclusivity, and socialization. The analysis included statistical testing (Mann-Whitney U) to compare user perceptions.</p>
+
+                <h3>Conclusion</h3>
+                <p>The study concluded that AI-generated faces could convey wellness and inclusivity on par with real faces. However, real faces were more effective in fostering 
+                a sense of social connection and relatability, while AIG faces were perceived as more culturally inclusive. The project highlighted the potential of AIG imagery in 
+                design but also emphasized the need for thoughtful application to address limitations like authenticity and emotional resonance.</p>
 
             </div>
         </div>
