--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Portfolio 9907</title>
     <link rel="stylesheet" href="/style.css">
-    <script src="/functions.js"></script>
+    <script src="javascript/functions.js"></script>
     <script src="https://kit.fontawesome.com/716b3ef599.js" crossorigin="anonymous"></script>
 </head>
 <body>
