--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,8 @@
                 <p>The project resulted in a mobile app prototype featuring a customizable checklist for trip preparation, digital gear inventory tracking, 
                 and tools for requesting or borrowing items. It also allowed group collaboration by sharing packing responsibilities, ensuring all needs were met efficiently and seamlessly.</p>
 
-                <p>If you want to have a closer look, please see the PDF below.</p>
-                <object class="pdf" data="/resources/G22_Workbook-compressed.pdf" height="600"></object>
+                <p>If you want to have a closer look, please see the Workbook PDF below.</p>
+                <object class="pdf" data="/resources/G22_Workbook-compressed.pdf" height="590"></object>
 
             </div>
 
