--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,10 @@
                 and tools for requesting or borrowing items. It also allowed group collaboration by sharing packing responsibilities, ensuring all needs were met efficiently and seamlessly.</p>
 
                 <p>If you want to have a closer look, please see the Workbook PDF below.</p>
-                <object class="pdf" data="/resources/G22_Workbook-compressed.pdf" height="590"></object>
+                <object data="resources/G22_Workbook-compressed.pdf" height="590">
+                    <p style="color: red;">Oops! Your browser doesn't support PDFs!</p>
+                    <p><a href="/resources/G22_Workbook-compressed.pdf" class="errorPDF" >Download Instead</a></p>
+                </object>
 
             </div>
 
