--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,20 @@
                     <p><a href="/resources/G22_Workbook-compressed.pdf" class="errorPDF" >Download Instead</a></p>
                 </object>
 
+                <div id="adobe-dc-view" style="height: 360px; width: 500px;"></div>
+                <script src="https://acrobatservices.adobe.com/view-sdk/viewer.js"></script>
+                <script type="text/javascript"> 
+                    document.addEventListener("adobe_dc_view_sdk.ready", 
+                    function(){
+                    var adobeDCView = new AdobeDC.View({clientId: "<a8e26707264f42cdbc93c70355ed9f65>", divId: "adobe-dc-view"});
+                    adobeDCView.previewFile({content:{ location:{ url: "https://acrobatservices.adobe.com/view-sdk-demo/PDFs/Bodea%20Brochure.pdf"}},
+                    metaData:{fileName: "Bodea Brochure.pdf"}},
+                        {
+                        embedMode: "SIZED_CONTAINER"
+                        });
+                    });
+                    </script>
+
             </div>
 
             <div id="AIG_faces" class="project" style="display:none">
