--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
                 <script type="text/javascript"> 
                     document.addEventListener("adobe_dc_view_sdk.ready", 
                     function(){
-                    var adobeDCView = new AdobeDC.View({clientId: "<acbab9e67d73486b84045c3cdb4ef3f0>", divId: "adobe-dc-view"});
+                    var adobeDCView = new AdobeDC.View({clientId: "acbab9e67d73486b84045c3cdb4ef3f0", divId: "adobe-dc-view"});
                     adobeDCView.previewFile({content:{ location:{ url: "https://acrobatservices.adobe.com/view-sdk-demo/PDFs/Bodea%20Brochure.pdf"}},
                     metaData:{fileName: "Bodea Brochure.pdf"}},
                         {
