--- a/projects.html
+++ b/projects.html
@@ -54,8 +54,8 @@
                     <p style="color: red;">Oops! Your browser doesn't support PDFs!</p>
                     <p><a href="/resources/G22_Workbook-compressed.pdf" class="errorPDF" >Download Instead</a></p>
                 </object> -->
-                <object data="mypdf.pdf" type="application/pdf" frameborder="0" width="100%" height="600px" style="padding: 20px;">
-                    <embed src="https://drive.google.com/file/d/1MfJb5swjC7JLCeZnj-27yuCN0zZEefUw/preview?usp=sharing" width="100%" height="600px"/> 
+                <object data="mypdf.pdf" type="application/pdf" frameborder="0">
+                    <embed id="SummatePDF"src="https://drive.google.com/file/d/1MfJb5swjC7JLCeZnj-27yuCN0zZEefUw/preview?usp=sharing"/> 
                 </object>
                 
 
