--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
         <nav>
             <div id="menuContent">
                 <ul>
-                    <li><a href="index.html"><i class="fa-solid fa-home"></i> HOME</a></li>
-                    <li><a href="projects.html"><i class="fa-solid fa-folder-open"></i> PROJECTS</a></li>
-                    <li><a href="contact.html" class="thispage"><i class="fa-solid fa-link"></i> CONTACT</a></li>
+                    <li><a href="index.html"><em class="fa-solid fa-home"></em> HOME</a></li>
+                    <li><a href="projects.html"><em class="fa-solid fa-folder-open"></em> PROJECTS</a></li>
+                    <li><a href="contact.html" class="thispage"><em class="fa-solid fa-link"></em> CONTACT</a></li>
                 </ul>
             </div>
         </nav>
