final edits before hand in

--- a/contact.html
+++ b/contact.html
@@ -33,14 +33,14 @@
             </div>
         
             <div class="gridItem contactBox">
-                <a href="https://www.linkedin.com/in/oskar-kallebo-rebermark">Oskar Rebermark</a>
+                <a href="https://www.linkedin.com/in/oskar-kallebo-rebermark">Oskar Rebermark - LinkedIn</a>
             </div>
             <div class="gridItem">
                 <img src="/resources/icons/linkedin.png" class="invert">
             </div>
             
             <div class="gridItem contactBox">
-                <a href="https://github.com/oskarrebermark">Oskar KR</a>
+                <a href="https://github.com/oskarrebermark">Oskar KR - GitHub</a>
             </div>
             <div class="gridItem">
                 <img src="/resources/icons/github.png" class="invert">
