added tools to homepage

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             <div class="gridPair"><h3 class="gridItem">SOFT SKILLS</h3><b>Communication:</b><p>Ability to articulate technical concepts to non-technical stakeholders, strong written and verbal communication</p><br>
             <b>Collaboration & Teamwork:</b><p>Experience working in interdisciplinary teams, bridging technical and business needs</p><br>
             <b>Problem-Solving & Critical Thinking:</b><p>Proactive in identifying and solving challenges, analytical mindset from research projects</p></div>
+            
+            <div class="gridPair"><h3 class="gridItem">TOOLS</h3>
+                <b>Protoyping & Ideating:</b><p>Figma, FigJam</p>
+                <b>Design:</b><p>Affinity Designer</p>
+                <b>Dev:</b><p>Visual Studio, VS Code, XCode, Brackets</p>
+            </div>
 
             <div class="gridPair"><h3 class="gridItem">INTERESTS</h3><p>Music! Food! Movies! All very unique categories...</p></div>
             
