--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <b>Problem-Solving & Critical Thinking:</b><p>Proactive in identifying and solving challenges, analytical mindset from research projects</p></div>
             
             <div class="gridPair"><h3 class="gridItem">TOOLS</h3>
-                <b>Protoyping & Ideating:</b><p>Figma, FigJam</p>
-                <b>Design:</b><p>Affinity Designer</p>
+                <b>Protoyping & Ideating:</b><p>Figma, FigJam</p><br>
+                <b>Design:</b><p>Affinity Designer</p><br>
                 <b>Dev:</b><p>Visual Studio, VS Code, XCode, Brackets</p>
             </div>
 
