added notdogs to projects and academics to home page

--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,8 @@
             <div class="tabBox">
                 <button class="tab activeP" onclick="openProject('Summate')">Summate</button>
                 <button class="tab" onclick="openProject('AIG_faces')">AIG Faces</button>
-                <button class="tab" onclick="openProject('weather')">WeatHear</button>
+                <button class="tab" onclick="openProject('NotDogs')">NotDogs</button>
+                <button class="tab" onclick="openProject('weather')">WeathEar</button>
             </div>
 
             <div id="Summate" class="project" style="display: block;">
@@ -93,10 +94,25 @@
 
                 </div>
             </div>
-            
-            <div id="weather" class="project" style="display: none;">
+
+            <div id="NotDogs" class="project" style="display: none;">
                 <div class="projContainer">
-                    <div class="gridItem"><h3>WeatHear</h3></div>
+                    <div class="gridItem"><h3>NotDogs</h3></div>
+                    <div class="gridItem"><p>"NotDogs" was a project undertaken in the course "introduction to Graphic Design" in the fall semester of 2023.</p></div>
+                    <div class="gridItem"><h3>About</h3></div>
+                    <div class="gridItem"><p>This was the main project in this course, we were tasked with designing different elements for an imaginary product of our choosing. </p></div>
+                    <div class="gridItem"><h3>End Product</h3></div>
+                    <div class="gridItem"><p>The project resulted in a food box for the </p></div>
+
+                    <div class="gridItem projEnd"><p>Here are some photos of the final product.</p></div>
+                    <div class="gridItem projEnd"><img src="/resources/NotDogsBoxFolded (kopia).pdf" alt="The end result folded."><img src="/resources/NotDogsBoxUnfolded (kopia).pdf" alt="The end result unfolded."></div>
+
+                </div>
+            </div>
+            
+            <div id="WeathEar" class="project" style="display: none;">
+                <div class="projContainer">
+                    <div class="gridItem"><h3>WeathEar</h3></div>
                     <div class="gridItem"><p>"WeatHear" is a project undertaken in the course "Sound in Interaction" in the spring semester of 2025.</p></div>
                     <div class="gridItem"><h3>Group Members</h3></div>
                     <div class="gridItem"><p>TBA...</p></div>
