--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
                     checklists, gear tracking, and shared packing responsibilities.</p></div>
                     
                     <div class="gridItem"><h3>User Testing</h3></div>
-                    <div class="gridItem"><p>Our team conducted semi-structured interviews with eight hikers to gain insights into hiking behaviors. 
+                    <div class="gridItem"><p>Our team conducted semi-structured interviews and a diary study with eight hikers to gain insights into hiking behaviors. 
                     Feedback from a high-fidelity prototype was collected during usability testing, with users performing tasks and highlighting pain points. 
                     The design was iteratively improved upon based on feedback through parallel prototyping and continuous refinement.</p></div>
                     
