small changes to homepage, added more space under contentbackground

--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,8 @@
                     <div class="gridItem"><p>The project resulted in a mobile app prototype featuring a customizable checklist for trip preparation, digital gear inventory tracking, 
                     and tools for requesting or borrowing items. It also allowed group collaboration by sharing packing responsibilities, ensuring all needs were met efficiently and seamlessly.</p></div>
                     
-                    <div class="griItem projEnd"><p>Here are are some parts of the prototype, click it to see the whole thing!</p>
+                    <div class="griItem projEnd">
+                        <p>Here are are some parts of the prototype, <a class="clickable" href="https://www.figma.com/proto/JI7gso7NeuaHWgyLZkHq8L/Summate?node-id=0-1&t=ILEH0shLTm3kZXvw-1">click it</a> to see the whole thing!</p>
                     </div>
                     
                     <div class="gridItem projEnd">
@@ -146,6 +147,7 @@
             </div> -->
 
     </div>
+
    
 </body>
 </html>
